--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Document</title>
+    <title>The News Week</title>
 </head>
 
 <body>
     <div class="fixed-top" id="stickynav">
         <div class="d-flex justify-content-between" id="navscroll">
             <div class="p-2">
-                <date id="datenav">Thu, Apr 25, 2019</date>
+                <time id="datenav">Sun, Sept 29, 2019</time>
             </div>
             <div class="p-2" id="signin">
                 <span>SIGN IN</span><a href="#" id="signinA">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
@@ -34,10 +34,11 @@
             <li><a>Bisiness</a></li>
             <li><a>Tech & Science</a></li>
             <li><a>Culture</a></li>
+            <li><a>Newsgeek</a></li>
             <li><a>Sports</a></li>
             <li><a>Health</a></li>
             <li><a>Opinion</a></li>
-            <li><a>Ndelible</a></li>
+            <li><a>Vantage</a></li>
             <li><a id="search">Search</a><i class="fas fa-search"></i></li>
         </ul>
     </nav>
@@ -329,8 +330,8 @@
                             </div>
                             <div class="article-info" id="sponsored">
                                 <h3>J.R.R. Tolkien: Inside the Mastermind of Middle-Earth</h3>
-                                <div class="summary">Nearly a century ago, J.R.R. Tolkien introduced readers to the world of Middle-Earth, capturing the hearts and minds of generations to come. Explore the man behind The Hobbit and The Lord of the Rings in this new Special Edition: J.R.R.
-                                    Tolkien!
+                                <div class="summary">Nearly a century ago, J.R.R. Tolkien introduced readers to the world of Middle-Earth, capturing the hearts and minds of generations to come. Explore the man behind The Hobbit and The Lord of the Rings in this new Special
+                                    Edition: J.R.R. Tolkien!
                                 </div>
                             </div>
                         </article>
@@ -372,12 +373,12 @@
                     </div>
 
                     <div class="col-md-9">
-                      
-                            <div class="row justify-content-center title-border">
-                                <span class="col-12 icon-n"></span>
-                                <span class="part-title">IN THE MAGAZINE</span>
-                            </div>
-                    
+
+                        <div class="row justify-content-center title-border">
+                            <span class="col-12 icon-n"></span>
+                            <span class="part-title">IN THE MAGAZINE</span>
+                        </div>
+
 
 
                         <div class="row">
