--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="fixed-top" id="stickynav">
         <div class="d-flex justify-content-between" id="navscroll">
             <div class="p-2">
-                <span id="datenav">Wen 2 Oct, 2019</span>
+                <span id="datenav">Wed 2 Oct, 2019</span>
             </div>
             <div class="p-2" id="signin">
                 <span>SIGN IN</span><a href="#" id="signinA">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
@@ -31,13 +31,14 @@
         <ul class="page-nav">
             <li><a>U.S.</a></li>
             <li><a>World</a></li>
-            <li><a>Bisiness</a></li>
+            <li><a>Business</a></li>
             <li><a>Tech & Science</a></li>
             <li><a>Culture</a></li>
+            <li><a>Newsgeek</a></li>
             <li><a>Sports</a></li>
             <li><a>Health</a></li>
             <li><a>Opinion</a></li>
-            <li><a>Ndelible</a></li>
+            <li><a>Vantage</a></li>
             <li><a id="search">Search</a><i class="fas fa-search"></i></li>
         </ul>
     </nav>
